resources/gitops-config/operators/cloudnative-pg/templates/cnpg-shared-pooler.yaml
# Pooler pods need: ingress from app namespaces on 5432, egress to PostgreSQL + DNS
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: pooler
  namespace: cnpg-system
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/poolerName: cnpg-shared-pooler
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: authentik
    toPorts:
    - ports:
      - port: "5432"
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: netbox
    toPorts:
    - ports:
      - port: "5432"
        protocol: TCP
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: cnpg-system
        app.kubernetes.io/name: postgresql
    toPorts:
    - ports:
      - port: "5432"
        protocol: TCP
